ocelot.archifleks.xyz/namespaces/seedbox/test-flux.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-flux
  name: test-flux
  namespace: seedbox
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.test-flux: "semver: >=1.0.0-rc.0, <1.0.1"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: test-flux
  template:
    metadata:
      labels:
        app: test-flux
    spec:
      containers:
      - image: archifleks/test-flux:v1.0.0
        imagePullPolicy: Always
        name: test-flux
