ocelot.archifleks.xyz/namespaces/seedbox/plex.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plex
  name: plex
  namespace: seedbox
spec:
  ports:
  - port: 32400
    protocol: TCP
  selector:
    app: plex
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.plex: regexp:^latest$
  labels:
    app: plex
  name: plex
  namespace: seedbox
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - env:
        - name: VERSION
          value: latest
        - name: PGID
          value: "977"
        - name: PUID
          value: "977"
        - name: TZ
          value: Europe/Paris
        image: linuxserver/plex:latest
        imagePullPolicy: Always
        name: plex
        ports:
        - containerPort: 32400
          hostPort: 32400
          protocol: TCP
        - containerPort: 32400
          hostPort: 32400
          protocol: UDP
        resources:
          requests:
            cpu: "1"
            memory: 4Gi
        volumeMounts:
        - mountPath: /config
          name: plex-config
        - mountPath: /library
          name: plex-library
        - mountPath: /tmp
          name: tmp
      securityContext:
        fsGroup: 977
      volumes:
      - hostPath:
          path: /srv/configs/plex
        name: plex-config
      - hostPath:
          path: /srv/seedbox
        name: plex-library
      - hostPath:
          path: /tmp
        name: tmp
