ocelot.archifleks.xyz/namespaces/seedbox/couchpotato.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: couchpotato
  name: couchpotato
  namespace: seedbox
spec:
  ports:
  - port: 5050
    protocol: TCP
  selector:
    app: couchpotato
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: couchpotato
  name: couchpotato
  namespace: seedbox
  annotations:
    flux.weave.works/automated: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: couchpotato
  template:
    metadata:
      labels:
        app: couchpotato
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - env:
        - name: PGID
          value: "977"
        - name: PUID
          value: "977"
        - name: TZ
          value: Europe/Paris
        image: linuxserver/couchpotato:latest
        imagePullPolicy: Always
        name: couchpotato
        ports:
        - containerPort: 5050
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 100m
            memory: 100M
        volumeMounts:
        - mountPath: /config
          name: couchpotato-data
        - mountPath: /downloads
          name: couchpotato-downloads
      securityContext:
        fsGroup: 977
      volumes:
      - hostPath:
          path: /srv/configs/couchpotato
        name: couchpotato-data
      - hostPath:
          path: /srv/seedbox
        name: couchpotato-downloads
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: couchpotato
  namespace: seedbox
spec:
  rules:
  - host: movies.archifleks.xyz
    http:
      paths:
      - backend:
          serviceName: couchpotato
          servicePort: 5050
  - host: couchpotato.archifleks.xyz
    http:
      paths:
      - backend:
          serviceName: couchpotato
          servicePort: 5050
