ocelot.archifleks.xyz/namespaces/seedbox/rtorrent.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rtorrent
  name: rtorrent-internal
  namespace: seedbox
spec:
  ports:
  - name: rtorrent-80
    port: 80
    protocol: TCP
  - name: rtorrent-5000
    port: 5000
    protocol: TCP
  selector:
    app: rtorrent
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/automated: "true"
  labels:
    app: rtorrent
  name: rtorrent
  namespace: seedbox
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: rtorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rtorrent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - env:
        - name: PGID
          value: "977"
        - name: PUID
          value: "977"
        - name: TZ
          value: Europe/Paris
        image: linuxserver/rutorrent:latest
        imagePullPolicy: Always
        name: rtorrent
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 5000
          protocol: TCP
        - containerPort: 6881
          hostPort: 6881
          protocol: TCP
        - containerPort: 51413
          hostPort: 51413
          protocol: TCP
        resources:
          limits:
            cpu: "2"
          requests:
            cpu: "1"
            memory: 200M
        volumeMounts:
        - mountPath: /config/rtorrent/rtorrent.rc
          name: rtorrent-config
          subPath: rtorrent.rc
        - mountPath: /downloads
          name: rtorrent-downloads
        - mountPath: /config/rutorrent
          name: rutorrent-config
      securityContext:
        fsGroup: 977
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: rtorrent-config
        name: rtorrent-config
      - hostPath:
          path: /srv/configs/rutorrent
        name: rutorrent-config
      - hostPath:
          path: /srv/seedbox
        name: rtorrent-downloads
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-secret: traefik-auth
    ingress.kubernetes.io/auth-type: basic
    kubernetes.io/ingress.class: traefik
  name: torrents
  namespace: seedbox
spec:
  rules:
  - host: torrents.archifleks.xyz
    http:
      paths:
      - backend:
          serviceName: rtorrent-internal
          servicePort: 80
