ocelot.archifleks.xyz/namespaces/seedbox/transmission.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission
  name: transmission
  namespace: seedbox
spec:
  ports:
  - name: transmission
    port: 9091
    protocol: TCP
  selector:
    app: transmission
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seedbox
  name: transmission
  labels:
    app: transmission
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.transmission: "glob:amd64-*"
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: seedbox
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        imagePullPolicy: Always
        image: linuxserver/transmission:amd64-2.94-r2-ls44
        ports:
        - containerPort: 9091
          protocol: TCP
          name: http
        - containerPort: 51414
          hostPort: 51414
          protocol: TCP
        - containerPort: 51414
          hostPort: 51414
          protocol: UDP
        volumeMounts:
        - mountPath: /downloads
          name: transmission-downloads
        - mountPath: /jfs
          name: transmission-jfs
        - mountPath: /config
          name: transmission-config
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /srv/configs/transmission
        name: transmission-config
      - hostPath:
          path: /srv/seedbox
        name: transmission-downloads
      - hostPath:
          path: /jfs
        name: transmission-jfs
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-secret: traefik-auth
    ingress.kubernetes.io/auth-type: basic
    kubernetes.io/ingress.class: traefik
  name: transmission
  namespace: seedbox
spec:
  rules:
  - host: transmission.archifleks.xyz
    http:
      paths:
      - backend:
          serviceName: transmission
          servicePort: 9091
